# rOSac

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  rOSac.py  requirements.txt
cmds/: disk.txt  interfaces.txt  ip.txt  log.txt  system.txt  user.txt
src/rosac/: __init__.py  cli.py  config.py  models.py
src/rosac/analyzers/: __init__.py
src/rosac/collectors/: __init__.py
src/rosac/transport/: __init__.py  api.py  base.py  ssh.py
src/rosac/utils/: logging.py
tests/: test_models.py  test_transport.py
